--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,8 @@ set(cpp_rtype_VERSION_MINOR 0)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib/")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib/)
 
 set(SERVER_SOURCE_FILES sources/server/main.cpp
                         sources/server/AManager.cpp
@@ -17,11 +17,21 @@ set(CLIENT_SOURCE_FILES sources/client/main.cpp
                         sources/client/AManager.cpp
                         sources/client/Mediator.cpp)
 
+set(UTILS_SOURCE_FILES sources/utils/Loader.cpp)
+
+set(LIBTEST_SOURCE_FILES sources/external_things/Test/Test.cpp)
+
 FILE (GLOB SERVER_INCLUDE_DIR includes/server/*.hpp)
 FILE (GLOB CLIENT_INCLUDE_DIR includes/client/*.hpp)
-INCLUDE_DIRECTORIES("includes")
+FILE (GLOB LIBTEST_INCLUDE_DIR includes/external_things/Test/*.hpp)
+FILE (GLOB UTILS_INCLUDE_DIR includes/utils/*.hpp)
 
-add_executable(rtype_server ${SERVER_INCLUDE_DIR} ${SERVER_SOURCE_FILES})
+include_directories("includes")
+
+add_library(Test SHARED ${LIBTEST_INCLUDE_DIR} ${LIBTEST_SOURCE_FILES})
+
+add_executable(rtype_server ${SERVER_INCLUDE_DIR} ${SERVER_SOURCE_FILES} ${UTILS_SOURCE_FILES})
+target_link_libraries(rtype_server Test ${CMAKE_DL_LIBS})
 
 add_executable(rtype_client ${CLIENT_INCLUDE_DIR} ${CLIENT_SOURCE_FILES})
 
@@ -29,9 +39,5 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 find_package(SFML 2 REQUIRED system window graphics network audio)
 if(SFML_FOUND)
     include_directories(${SFML_INCLUDE_DIR})
-    target_link_libraries(rtype_client ${SFML_LIBRARIES})
+    target_link_libraries(rtype_client ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
 endif()
-
-target_link_libraries(rtype_client ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
-
-add_library(sexy SHARED sources/client/main.cpp)
