--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(SERVER_SOURCE_FILES sources/server/main.cpp
                         sources/server/Mediator.cpp
                         sources/server/ASystem.cpp
                         sources/server/AEntity.cpp
-                        sources/server/ETPlayer.cpp)
+                        sources/server/ETPlayer.cpp
                         sources/server/SMovement.cpp
                         sources/server/CPosition.cpp
                         sources/server/CVelocity.cpp)
