--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ set(SERVER_SOURCE_FILES sources/server/main.cpp
                         sources/server/Systems/SMovement.cpp
                         sources/server/Components/CPosition.cpp
                         sources/server/Components/CVelocity.cpp
-                        sources/server/Components/CShield.cpp)
+                        sources/server/Components/CShield.cpp
+                        sources/server/Components/CScore.cpp sources/server/Components/CMissile.cpp includes/server/Components/CMissile.hpp)
 
 set(CLIENT_SOURCE_FILES sources/client/main.cpp
                         sources/client/AManager.cpp
@@ -33,6 +34,9 @@ set(UTILS_SOURCE_FILES sources/utils/Loader.cpp)
 set(LIBTEST_SOURCE_FILES sources/external_things/Test/Test.cpp)
 
 FILE (GLOB SERVER_INCLUDE_DIR includes/server/*.hpp)
+FILE (GLOB SERVER_COMPONENT_DIR includes/server/Components/*.hpp)
+FILE (GLOB SERVER_ENTITY_DIR includes/server/Entities/*.hpp)
+FILE (GLOB SERVER_SYSTEM_DIR includes/server/Systems/*.hpp)
 FILE (GLOB CLIENT_INCLUDE_DIR includes/client/*.hpp)
 FILE (GLOB LIBTEST_INCLUDE_DIR includes/external_things/Test/*.hpp)
 FILE (GLOB UTILS_INCLUDE_DIR includes/utils/*.hpp)
@@ -41,7 +45,7 @@ include_directories("includes")
 
 add_library(Test SHARED ${LIBTEST_INCLUDE_DIR} ${LIBTEST_SOURCE_FILES})
 
-add_executable(rtype_server ${SERVER_INCLUDE_DIR} ${SERVER_SOURCE_FILES} ${UTILS_SOURCE_FILES})
+add_executable(rtype_server ${SERVER_INCLUDE_DIR} ${SERVER_SOURCE_FILES} ${SERVER_COMPONENT_DIR} ${SERVER_ENTITY_DIR} ${SERVER_SYSTEM_DIR} ${UTILS_SOURCE_FILES})
 target_link_libraries(rtype_server ${CMAKE_DL_LIBS})
 
 add_executable(rtype_client ${CLIENT_INCLUDE_DIR} ${CLIENT_SOURCE_FILES})
