--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ set(SERVER_SOURCE_FILES sources/server/main.cpp
                         sources/server/AManager.cpp
                         sources/server/Mediator.cpp
                         sources/server/ASystem.cpp
-                        sources/server/AEntity.cpp
+        sources/server/ABasicEntity.cpp
 						sources/server/FFEngine.cpp
 						sources/server/EntityFactory.cpp
                         sources/server/Systems/SMovement.cpp
