--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,23 +15,24 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin)
 
 set(SERVER_SOURCE_FILES sources/server/main.cpp
-                        sources/server/AManager.cpp
-                        sources/server/Mediator.cpp
-                        sources/server/ASystem.cpp
-					        sources/server/AEntity.cpp
-						sources/server/FFEngine.cpp
-						sources/server/GameSession.cpp
-						sources/server/Systems/SMovement.cpp
-                        sources/server/Components/CPosition.cpp
-                        sources/server/Components/CVelocity.cpp
-                        sources/server/Components/CShield.cpp
-                        sources/server/Components/CScore.cpp
-						sources/server/Components/CDisplay.cpp
-						sources/server/Components/CSound.cpp
-						sources/server/Components/CMusic.cpp
-						sources/server/Components/CHealth.cpp
-						sources/server/Components/CExplosion.cpp
-						sources/server/Components/CArtificialIntelligence.cpp)
+sources/server/AManager.cpp
+sources/server/Mediator.cpp
+sources/server/ASystem.cpp
+sources/server/AMap.cpp
+sources/server/AEntity.cpp
+sources/server/FFEngine.cpp
+sources/server/GameSession.cpp
+sources/server/Systems/SMovement.cpp
+sources/server/Components/CPosition.cpp
+sources/server/Components/CVelocity.cpp
+sources/server/Components/CShield.cpp
+sources/server/Components/CScore.cpp
+sources/server/Components/CDisplay.cpp
+sources/server/Components/CSound.cpp
+sources/server/Components/CMusic.cpp
+sources/server/Components/CHealth.cpp
+sources/server/Components/CExplosion.cpp
+sources/server/Components/CArtificialIntelligence.cpp)
 
 set(CLIENT_SOURCE_FILES sources/client/main.cpp
                         sources/client/AManager.cpp
@@ -41,6 +42,7 @@ set(UTILS_SOURCE_FILES sources/utils/Loader.cpp)
 
 set(ETPLAYER_SOURCE_FILES sources/shared_libraries/entities/ETPlayer.cpp)
 set(ETMONSTER_SOURCE_FILES sources/shared_libraries/entities/ETMonster.cpp)
+set(ETLEVEL1_SOURCE_FILES sources/shared_libraries/entities/ETLevel1.cpp)
 
 FILE (GLOB SERVER_INCLUDE_DIR includes/server/*.hpp)
 FILE (GLOB SERVER_COMPONENT_DIR includes/server/Components/*.hpp)
@@ -50,12 +52,15 @@ FILE (GLOB SERVER_SYSTEMS_INCLUDE_DIR includes/server/Systems/*.hpp)
 
 FILE (GLOB ETPLAYER_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer.hpp)
 FILE (GLOB ETMONSTER_INCLUDE_DIR includes/shared_libraries/entities/ETMonster.hpp)
+FILE (GLOB ETLEVEL1_INCLUDE_DIR include/shared_libraries/entities/ETLevel1.hpp)
+
 FILE (GLOB UTILS_INCLUDE_DIR includes/utils/*.hpp)
 
 include_directories("includes")
 
 add_library(ETPlayer SHARED ${ETPLAYER_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPLAYER_SOURCE_FILES})
 add_library(ETMonster SHARED ${ETMONSTER_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETMONSTER_SOURCE_FILES})
+add_library(ETLevel1 SHARED ${ETLEVEL1_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETLEVEL1_SOURCE_FILES})
 
 add_executable(rtype_server ${SERVER_INCLUDE_DIR}
 			    			${SERVER_ENTITIES_INCLUDE_DIR}
