--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ sources/server/Components/CSound.cpp
 sources/server/Components/CMusic.cpp
 sources/server/Components/CHealth.cpp
 sources/server/Components/CExplosion.cpp
-sources/server/Components/CArtificialIntelligence.cpp)
+sources/server/Components/CArtificialIntelligence.cpp sources/server/Systems/SShoot.cpp includes/server/Systems/SShoot.hpp)
 
 set(CLIENT_SOURCE_FILES sources/client/main.cpp
                         sources/client/AManager.cpp
@@ -43,7 +43,7 @@ set(UTILS_SOURCE_FILES sources/utils/Loader.cpp)
 set(ETPLAYER_SOURCE_FILES sources/shared_libraries/entities/ETPlayer.cpp)
 set(ETBASICMONSTER_SOURCE_FILES sources/shared_libraries/entities/ETBasicMonster.cpp)
 set(ETLEVEL1_SOURCE_FILES sources/shared_libraries/entities/ETLevel1.cpp)
-set(ETBASICMISSILE_SOURCE_FILES sources/shared_libraries/entities/ETBasicMissile.cpp)
+set(ETPLAYERMISSILE_SOURCE_FILES sources/shared_libraries/entities/ETPlayerMissile.cpp)
 set(ETBASICOBSTACLE_SOURCE_FILES sources/shared_libraries/entities/ETBasicObstacle.cpp)
 
 FILE (GLOB SERVER_INCLUDE_DIR includes/server/*.hpp)
@@ -54,7 +54,7 @@ FILE (GLOB SERVER_SYSTEMS_INCLUDE_DIR includes/server/Systems/*.hpp)
 FILE (GLOB ETPLAYER_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer.hpp)
 FILE (GLOB ETBASICMONSTER_INCLUDE_DIR includes/shared_libraries/entities/ETBasicMonster.hpp)
 FILE (GLOB ETLEVEL1_INCLUDE_DIR include/shared_libraries/entities/ETLevel1.hpp)
-FILE (GLOB ETBASICMISSILE_INCLUDE_DIR includes/shared_libraries/entities/ETBasicMissile.hpp)
+FILE (GLOB ETPLAYERMISSILE_INCLUDE_DIR includes/shared_libraries/entities/ETPlayerMissile.hpp)
 FILE (GLOB ETBASICOBSTACLE_INCLUDE_DIR includes/shared_libraries/entities/ETBasicObstacle.hpp)
 
 FILE (GLOB UTILS_INCLUDE_DIR includes/utils/*.hpp)
@@ -64,7 +64,7 @@ include_directories("includes")
 add_library(ETPlayer SHARED ${ETPLAYER_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPLAYER_SOURCE_FILES})
 add_library(ETBasicMonster SHARED ${ETBASICMONSTER_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETBASICMONSTER_SOURCE_FILES})
 add_library(ETLevel1 SHARED ${ETLEVEL1_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETLEVEL1_SOURCE_FILES})
-add_library(ETBasicMissile SHARED ${ETBASICMISSILE_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETBASICMISSILE_SOURCE_FILES})
+add_library(ETPlayerMissile SHARED ${ETPLAYERMISSILE_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPLAYERMISSILE_SOURCE_FILES})
 add_library(ETBasicObstacle SHARED ${ETBASICOBSTACLE_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETBASICOBSTACLE_SOURCE_FILES})
 
 add_executable(rtype_server ${SERVER_INCLUDE_DIR}
