--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,10 @@ set(CLIENT_SOURCE_FILES sources/client/main.cpp
 
 set(UTILS_SOURCE_FILES sources/utils/Loader.cpp sources/utils/Error.cpp sources/server/Systems/SSpawn.cpp)
 
-set(ETPLAYER_SOURCE_FILES sources/shared_libraries/entities/ETPlayer.cpp)
+set(ETPlayer1_SOURCE_FILES sources/shared_libraries/entities/ETPlayer1.cpp)
+set(ETPlayer2_SOURCE_FILES sources/shared_libraries/entities/ETPlayer2.cpp)
+set(ETPlayer3_SOURCE_FILES sources/shared_libraries/entities/ETPlayer3.cpp)
+set(ETPlayer4_SOURCE_FILES sources/shared_libraries/entities/ETPlayer4.cpp)
 set(ETBASICMONSTER_SOURCE_FILES sources/shared_libraries/entities/ETBasicMonster.cpp)
 set(ETLEVEL1_SOURCE_FILES sources/shared_libraries/entities/ETLevel1.cpp)
 set(ETPLAYERMISSILE_SOURCE_FILES sources/shared_libraries/entities/ETPlayerMissile.cpp)
@@ -55,7 +58,10 @@ FILE (GLOB SERVER_ENTITIES_INCLUDE_DIR includes/shared_libraries/entities/*.hpp)
 FILE (GLOB SERVER_COMPONENTS_INCLUDE_DIR includes/server/Components/*.hpp)
 FILE (GLOB SERVER_SYSTEMS_INCLUDE_DIR includes/server/Systems/*.hpp)
 
-FILE (GLOB ETPLAYER_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer.hpp)
+FILE (GLOB ETPlayer1_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer1.hpp)
+FILE (GLOB ETPlayer2_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer2.hpp)
+FILE (GLOB ETPlayer3_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer3.hpp)
+FILE (GLOB ETPlayer4_INCLUDE_DIR includes/shared_libraries/entities/ETPlayer4.hpp)
 FILE (GLOB ETBASICMONSTER_INCLUDE_DIR includes/shared_libraries/entities/ETBasicMonster.hpp)
 FILE (GLOB ETLEVEL1_INCLUDE_DIR include/shared_libraries/entities/ETLevel1.hpp)
 FILE (GLOB ETPLAYERMISSILE_INCLUDE_DIR includes/shared_libraries/entities/ETPlayerMissile.hpp)
@@ -65,7 +71,10 @@ FILE (GLOB UTILS_INCLUDE_DIR includes/utils/*.hpp)
 
 include_directories("includes")
 
-add_library(ETPlayer SHARED ${ETPLAYER_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPLAYER_SOURCE_FILES})
+add_library(ETPlayer1 SHARED ${ETPlayer1_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPlayer1_SOURCE_FILES})
+add_library(ETPlayer2 SHARED ${ETPlayer2_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPlayer2_SOURCE_FILES})
+add_library(ETPlayer3 SHARED ${ETPlayer3_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPlayer3_SOURCE_FILES})
+add_library(ETPlayer4 SHARED ${ETPlayer4_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPlayer4_SOURCE_FILES})
 add_library(ETBasicMonster SHARED ${ETBASICMONSTER_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETBASICMONSTER_SOURCE_FILES})
 add_library(ETLevel1 SHARED ${ETLEVEL1_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETLEVEL1_SOURCE_FILES})
 add_library(ETPlayerMissile SHARED ${ETPLAYERMISSILE_INCLUDE_DIR} ${SERVER_INCLUDE_DIR} ${ETPLAYERMISSILE_SOURCE_FILES})
